# LLM-GPT

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  dlhandle.hpp  g4a-common.cpp  g4a_common.cpp  gptj.cpp  justlm.cpp  justlm.hpp  justlm_gptj.hpp  justlm_llama.hpp  justlm_llama_old.hpp  justlm_mpt.hpp  justlm_pool.cpp  libjustlm_core.cpp  libjustlm_gpt2.cpp  libjustlm_llama.cpp  llama.cpp  llama.cpp.cmake  llama_mainline.cpp  llama_old.cpp  llama_old2.cpp  mpt.cpp  msvc_compat_unistd.h  pybind.cpp  test.cpp
gpt2/: arith.c  arith.h  cp_utils.c  cp_utils.h  cutils.h  gpt2tc.c  gpt2tc.h  gpt2vocab.txt  libnc.h  list.h  readme.txt
gptj/: additions.cpp  additions.hpp  gptj.cpp  gptj.hpp  utils.cpp  utils.hpp
include/: justlm.hpp  justlm_pool.hpp
mpt/: mpt.cpp  mpt.hpp
